tests/bookinfo/bookinfo-netpol-details.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: details
  labels:
    app: details
spec:
  podSelector:
    matchLabels:
      app: details
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: productpage
