tests/bookinfo/bookinfo-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: details
spec:
  podSelector:
    matchLabels:
      app: details
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: productpage
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ratings
spec:
  podSelector:
    matchLabels:
      app: ratings
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: reviews
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: reviews-v1
spec:
  podSelector:
    matchLabels:
      app: reviews
      version: v1
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: productpage
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: reviews-v2
spec:
  podSelector:
    matchLabels:
      app: reviews
      version: v2
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: productpage
